[package]
name = "ecmascript-syntax"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
swc_common = { version = "15.0.0", features = ["tty-emitter"] }
swc_core = { version = "45.0.1", features = ["ecma_visit"] }
swc_ecma_parser = { version = "25.0.0", default-features = false }
