[package]
name = "ecmascript-syntax"
version = "0.1.0"
edition = "2024"

[dependencies]
annotate-snippets = "0.12.15"
clap = { version = "4.5.35", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["display"] }
itertools = "0.14.0"
platform-cast = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
strum = { version = "0.28.0", features = ["derive"] }
swc_common = { version = "21.0.1", features = ["tty-emitter"] }
swc_core = { version = "63.1.3", features = ["ecma_visit"] }
swc_ecma_parser = { version = "38.0.2", default-features = false }
swc_ecma_regexp = "0.10.0"
swc_ecma_regexp_visit = { version = "0.10.0", default-features = false }
